[project]
name = "pddl-mud"
version = "0.1.0"
description = "PDDL unsatisfiable domain minimizer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "unified-planning>=1.3.0",
]

[tool.uv.sources]
up-aries = { path = "../../../../home/abitmonnot/work/aries/planning/unified/plugin", editable = true }
unified-planning = { path = "../../../../home/abitmonnot/work/projects/up", editable = true }

[dependency-groups]
dev = [
    "up-aries>=0.5.0.post71",
]
